compiler/testData/cli/metadata/inheritorOfExpectSealedClass.out
compiler/testData/cli/metadata/inheritorOfExpectSealedClass/common-1.kt:1:21: error: base: expect and corresponding actual are declared in the same module.
expect sealed class Base
                    ^^^^
compiler/testData/cli/metadata/inheritorOfExpectSealedClass/common-2.kt:1:21: error: 'public sealed actual class Base : Any' has no corresponding expected declaration
actual sealed class Base
                    ^^^^
compiler/testData/cli/metadata/inheritorOfExpectSealedClass/common-2.kt:1:21: error: base: expect and corresponding actual are declared in the same module.
actual sealed class Base
                    ^^^^
compiler/testData/cli/metadata/inheritorOfExpectSealedClass/common-3.kt:1:17: error: expect class does not declare any constructors.
class Derived : Base()
                ^^^^^^
COMPILATION_ERROR
